# Fisica-Computacional

./: README.md  index.html  package.json  style.css  webpack.config.js
aquecimento-1/: aquecimentoUmCode.js  aquecimentoUmCode.ts  index.html
aquecimento-2/: aquecimentoDoisCode.js  index.html
aquecimento-3/: aquecimentoTresCode.js  aquecimentoTresCode.ts  index.html
data/dadosMeteorologicos/: INMET_S_SC_A806_FLORIANOPOLIS_01-01-2022_A_31-12-2022.CSV
src/: index.d.ts
src/analiseDadosMeteorologicos1/: index.ts
src/aquecimento2/: index.ts
src/aquecimento3/: index.ts
src/aquecimento4/: index.ts  trainGraphics.ts  wavesums.ts
src/assets/data/: dadosMeteorologicos_brasilia.json  dadosMeteorologicos_florianopolis.json  dadosMeteorologicos_macapa.json
src/components/: HomeButton.tsx  Link.tsx
src/pages/: index.page.client.tsx  index.page.tsx  projetoFinal.page.client.tsx
src/pages/listas/: analiseDadosMeteorologicos1.page.client.tsx  analiseDadosMeteorologicos2.page.client.tsx  aquecimento1.page.client.tsx  aquecimento2.page.client.tsx  aquecimento3.page.client.tsx  aquecimento4.page.client.tsx  edoEuler.page.client.tsx  espectroEletrons137C.page.client.tsx  interpolacaooLinear1D2D3D.page.client.tsx  lenteMagnetica.page.client.tsx  minimosQuadrados.page.client.tsx  numerosAleatoriosNaoUniformes1.page.client.tsx  (+7 more)
src/scripts/: arrayManipulation.ts  cinetica.ts  eletromagnetismo.ts  linearAlgebra.ts  numerosAleatorios.ts  physicsConstants.ts  statistics.ts
src/scripts/Python/: csvToJson.ipynb  pyproject.toml  teste.json
src/styles/: global.css
(+9 files in other folders)
