[tool.poetry]
name = "fisica-computacional-python"
version = "0.1.0"
description = ""
authors = ["Lucas-GBP <lucas.bitencourte.pedroso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
simplejson = "^3.19.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
